--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,6 +241,7 @@ a:hover {
 /*------/ Socials /------*/
 .socials {
   padding: 1.5rem 0;
+  align-content: left;
 }
 
 .socials ul li {
@@ -253,7 +254,7 @@ a:hover {
   font-size: 1.7rem;
   border-radius: 50%;
   line-height: 1.4;
-  margin: 0 15px 0 0;
+  margin: 0 7.5px 0 7.5px;
   box-shadow: 0 0 0 3px #0078ff;
   transition: all 500ms ease;
 }
@@ -275,19 +276,19 @@ a:hover {
 }
 
 .header-socials .ico-circle {
-  color: rgb(165, 165, 165);
+  color: rgb(146, 146, 146);
   height: 30px;
   width: 30px;
   font-size: 1.4rem;
   border-radius: 50%;
   line-height: 1.4;
-  margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px rgb(165, 165, 165);
+  margin: 0 7.5px 0 7.5px;
+  box-shadow: 0 0 0 3px rgb(146, 146, 146);
   transition: all 500ms ease;
 }
 
 .header-socials .ico-circle:hover {
-  background-color: rgb(165, 165, 165);
+  background-color: rgb(146, 146, 146);
   color: #000;
   box-shadow: 0 0 0 3px #cde1f8;
   transition: all 500ms ease;
@@ -748,6 +749,8 @@ a:hover {
 .intro .sub_div { 
   position: absolute; 
   bottom: 0px; 
+  left: 0px;
+  right: 0px;
 } 
 
 @media (min-width: 768px) {
@@ -957,7 +960,10 @@ a:hover {
 	}
 	#resume .timeline-header p {
 		/* font-size: 1.4rem; */
-	}
+  }
+  #resume .resume-header h2 {
+    margin-left: 1.5rem;
+  }
 	#resume .timeline-content {
 		padding-left: 50px;
 	}
@@ -967,17 +973,26 @@ a:hover {
 		left: 2.4rem;
 	}
 	#resume .timeline-ico {
+    margin-left: -1.5rem;
 		left: 2.4rem;
 	}
 	#resume .timeline-header {
 		float: none;
-		width: auto;
+    width: auto;
 		padding-right: 15px;
 		text-align: left;
 	}
 	#resume .timeline-header h3 {
 		font-size: 2rem;
-	}
+  }
+  #resume .resume-header h2 {
+    margin-left: 1.5rem;
+  }
+  #resume .timeline-block {
+    position: relative;
+    padding-top: 1.5rem;
+    margin-right: 1.5rem;
+  }
 	#resume .timeline-header p {
 		/* font-size: 1.5rem; */
 		margin-bottom: 1.5rem;
@@ -1001,10 +1016,11 @@ a:hover {
 }
 @media only screen and (max-width:480px) {
 	#resume .resume-header h2 {
-		/* font-size: 2.2rem; */
+		font-size: 2.2rem;
 	}
 	#resume .timeline-wrap::before {
-		left: 1.8rem;
+    left: 1.8rem;
+    /* margin-left: 5rem; */
 	}
 	#resume .timeline-ico {
 		height: 3.6rem;
@@ -1013,7 +1029,12 @@ a:hover {
 		left: 1.8rem;
 		margin-left: -1.8rem;
 		font-size: 1.5rem;
-	}
+  }
+  #resume .timeline-block {
+    position: relative;
+    padding-top: 1.5rem;
+    margin-right: 1.5rem;
+  }
 	#resume .timeline-header, #resume .timeline-content {
 		padding-left: 5.5rem;
 	}
@@ -1211,7 +1232,7 @@ a:hover {
 }
 
 .contact-mf {
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 
 @media (min-width: 767px) {
