--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1169,6 +1169,37 @@ a:hover {
   font-size: 1.2rem;
 }
 
+/* .bg-modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+.modal-content {
+  width: 800px;
+  height: 800px;
+  background-color: white;
+  border-radius: 4px;
+  text-align: center;
+  padding: 20px;
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 14px;
+  font-size: 35px;
+  transform: rotate(45deg);
+  cursor: pointer;
+} */
+
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
